responses refactored